renderer/components/header.css
.base {
	display: flex;
	position: fixed;
	z-index: 100;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	text-align: center;
	justify-content: center;
	width: 50px;
	height: 100%;
	background-color: #292f33;
}

.add {
	width: 45px;
	height: 45px;
	cursor: pointer;
}

.add i::before {
	font-size: 2.5rem;
	color: gray;
	content: '+';
}

